--- a/index.html
+++ b/index.html
@@ -56,32 +56,32 @@
       <div class="shopping-cart">
         <div class="box">
           <i class="fas fa-trash"></i>
-          <img src="products/product-7.jpg" width="80" alt="" />
+          <img src="images/products/p-7.jpg" width="80" alt="" />
           <div class="content">
-            <h3>t-shirt</h3>
-            <span class="price">$4.99/-</span>
+            <h3>Cold drinks</h3>
+            <span class="price">Rs- 50-140 ₹</span>
             <span class="quantity">qty: 1</span>
           </div>
         </div>
         <div class="box">
           <i class="fas fa-trash"></i>
-          <img src="products/product-8.jpg" width="80" alt="" />
+          <img src="images/products/p-3.png" width="80" alt="" />
           <div class="content">
-            <h3>t-shirt</h3>
-            <span class="price">$4.99/-</span>
+            <h3>Special pizza</h3>
+            <span class="price">Rs-350 ₹</span>
             <span class="quantity">qty: 1</span>
           </div>
         </div>
         <div class="box">
           <i class="fas fa-trash"></i>
-          <img src="products/product-3.jpeg" width="80" alt="" />
+          <img src="images/products/p-2.png" width="80" alt="" />
           <div class="content">
-            <h3>t-shirt</h3>
-            <span class="price">$4.99/-</span>
+            <h3>Veg Snacks</h3>
+            <span class="price">Rs- 50-170 ₹</span>
             <span class="quantity">qty: 1</span>
           </div>
         </div>
-        <div class="total">Total : $21.3/-</div>
+        <div class="total">Total : 870 ₹-</div>
         <a href="#" class="btn">checkout</a>
       </div>
 
@@ -174,8 +174,8 @@
           <div class="products">
             <div class="product">
               <img src="images/products/p-5.jpg" alt="" />
-              <h3>solid regular top</h3>
-              <div class="price">$4.99/- -$12.4/-</div>
+              <h3>Spicy Burger</h3>
+              <div class="price">Rs-120 ₹</div>
               <div class="buttn">
                 <a href="https://api.whatsapp.com/send?phone=%2B917001095110&data_filter_required=ARCKb-DBbpRdgRu-J9EiFLouPvCAlhHYz5x-nir6SQumUC2cgKGqKlKmoxxScJsYKLgiOn25LGW1LBeDLQmv9RZln2az2VXPT_IAjb2b_kGRjADYlPce5FuBNJ0SZirkGNEb51vPW0ctORxj0QQszM8Juw&source=FB_Page&app=facebook&entry_point=page_cta"target="_blank"><button class="call-btn">Call Now</button></a>
                 <button>Add to Cart</button>
@@ -185,8 +185,8 @@
           <div class="products">
             <div class="product">
               <img src="images/products/p-2.png" alt="" />
-              <h3>solid regular top</h3>
-              <div class="price">$4.99/- -$12.4/-</div>
+              <h3>Veg Snacks</h3>
+              <div class="price">Rs- 50-170 ₹</div>
               <div class="buttn">
                 <a href="https://api.whatsapp.com/send?phone=%2B917001095110&data_filter_required=ARCKb-DBbpRdgRu-J9EiFLouPvCAlhHYz5x-nir6SQumUC2cgKGqKlKmoxxScJsYKLgiOn25LGW1LBeDLQmv9RZln2az2VXPT_IAjb2b_kGRjADYlPce5FuBNJ0SZirkGNEb51vPW0ctORxj0QQszM8Juw&source=FB_Page&app=facebook&entry_point=page_cta"target="_blank"><button class="call-btn">Call Now</button></a>
                 <button>Add to Cart</button>
@@ -196,8 +196,8 @@
           <div class="products">
             <div class="product">
               <img src="images/products/p-6.jpg" alt="" />
-              <h3>solid regular top</h3>
-              <div class="price">$4.99/- -$12.4/-</div>
+              <h3>All Special</h3>
+              <div class="price">Rs- 250 ₹</div>
               <div class="buttn">
                 <a href="https://api.whatsapp.com/send?phone=%2B917001095110&data_filter_required=ARCKb-DBbpRdgRu-J9EiFLouPvCAlhHYz5x-nir6SQumUC2cgKGqKlKmoxxScJsYKLgiOn25LGW1LBeDLQmv9RZln2az2VXPT_IAjb2b_kGRjADYlPce5FuBNJ0SZirkGNEb51vPW0ctORxj0QQszM8Juw&source=FB_Page&app=facebook&entry_point=page_cta"target="_blank"><button class="call-btn">Call Now</button></a>
                 <button>Add to Cart</button>
@@ -207,8 +207,8 @@
           <div class="products">
             <div class="product">
               <img src="images/products/p-7.jpg" alt="" />
-              <h3>solid regular top</h3>
-              <div class="price">$4.99/- -$12.4/-</div>
+              <h3>Cold drinks</h3>
+              <div class="price">Rs- 50-140 ₹</div>
               <div class="buttn">
                 <a href="https://api.whatsapp.com/send?phone=%2B917001095110&data_filter_required=ARCKb-DBbpRdgRu-J9EiFLouPvCAlhHYz5x-nir6SQumUC2cgKGqKlKmoxxScJsYKLgiOn25LGW1LBeDLQmv9RZln2az2VXPT_IAjb2b_kGRjADYlPce5FuBNJ0SZirkGNEb51vPW0ctORxj0QQszM8Juw&source=FB_Page&app=facebook&entry_point=page_cta"target="_blank"><button class="call-btn">Call Now</button></a>
                 <button>Add to Cart</button>
@@ -218,8 +218,8 @@
           <div class="products">
             <div class="product">
               <img src="images/products/p-1.png" alt="" />
-              <h3>solid regular top</h3>
-              <div class="price">$4.99/- -$12.4/-</div>
+              <h3>Adda Special Coffe</h3>
+              <div class="price">Rs- 120 ₹</div>
               <div class="buttn">
                 <a href="https://api.whatsapp.com/send?phone=%2B917001095110&data_filter_required=ARCKb-DBbpRdgRu-J9EiFLouPvCAlhHYz5x-nir6SQumUC2cgKGqKlKmoxxScJsYKLgiOn25LGW1LBeDLQmv9RZln2az2VXPT_IAjb2b_kGRjADYlPce5FuBNJ0SZirkGNEb51vPW0ctORxj0QQszM8Juw&source=FB_Page&app=facebook&entry_point=page_cta"target="_blank"><button class="call-btn">Call Now</button></a>
                 <button>Add to Cart</button>
@@ -229,8 +229,8 @@
           <div class="products">
             <div class="product">
               <img src="images/products/p-4.png" alt="" />
-              <h3>solid regular top</h3>
-              <div class="price">$4.99/- -$12.4/-</div>
+              <h3>Cold coffe</h3>
+              <div class="price">Rs- 80 ₹</div>
               <div class="buttn">
                 <a href="https://api.whatsapp.com/send?phone=%2B917001095110&data_filter_required=ARCKb-DBbpRdgRu-J9EiFLouPvCAlhHYz5x-nir6SQumUC2cgKGqKlKmoxxScJsYKLgiOn25LGW1LBeDLQmv9RZln2az2VXPT_IAjb2b_kGRjADYlPce5FuBNJ0SZirkGNEb51vPW0ctORxj0QQszM8Juw&source=FB_Page&app=facebook&entry_point=page_cta"target="_blank"><button class="call-btn">Call Now</button></a>
                 <button>Add to Cart</button>
@@ -240,8 +240,8 @@
           <div class="products">
             <div class="product">
               <img src="images/products/p-8.jpg" alt="" />
-              <h3>solid regular top</h3>
-              <div class="price">$4.99/- -$12.4/-</div>
+              <h3>Chicken Tikka</h3>
+              <div class="price">Rs- 150 ₹</div>
               <div class="buttn">
                 <a href="https://api.whatsapp.com/send?phone=%2B917001095110&data_filter_required=ARCKb-DBbpRdgRu-J9EiFLouPvCAlhHYz5x-nir6SQumUC2cgKGqKlKmoxxScJsYKLgiOn25LGW1LBeDLQmv9RZln2az2VXPT_IAjb2b_kGRjADYlPce5FuBNJ0SZirkGNEb51vPW0ctORxj0QQszM8Juw&source=FB_Page&app=facebook&entry_point=page_cta"target="_blank"><button class="call-btn">Call Now</button></a>
                 <button>Add to Cart</button>
@@ -251,8 +251,8 @@
           <div class="products">
             <div class="product">
               <img src="images/products/p-3.png" alt="" />
-              <h3>solid regular top</h3>
-              <div class="price">$4.99/- -$12.4/-</div>
+              <h3>Special Pizza</h3>
+              <div class="price">Rs- 350 ₹ </div>
               <div class="buttn">
                 <a href="https://api.whatsapp.com/send?phone=%2B917001095110&data_filter_required=ARCKb-DBbpRdgRu-J9EiFLouPvCAlhHYz5x-nir6SQumUC2cgKGqKlKmoxxScJsYKLgiOn25LGW1LBeDLQmv9RZln2az2VXPT_IAjb2b_kGRjADYlPce5FuBNJ0SZirkGNEb51vPW0ctORxj0QQszM8Juw&source=FB_Page&app=facebook&entry_point=page_cta"target="_blank"><button class="call-btn">Call Now</button></a>
                 <button>Add to Cart</button>
